added link to getPassword page, created exerciseHistory route, modified css

--- a/views/getPassword.pug
+++ b/views/getPassword.pug
@@ -8,4 +8,4 @@ block content
             br
             input#email.form-control(type='email' name='email')
             br
-            input(type="submit" value="submit") 
+            input(type="submit" value="Submit") 
