--- a/views/home.pug
+++ b/views/home.pug
@@ -1,9 +1,9 @@
 extends layout
 block content
     body
-        h1 Welcome 
+        h1 Welcome to Tactical Fit 
         p.text-left
-            | Welcome to the Tactical Barbell Web App. Originally designed for military operatives and combat athletes,
+            | This app is based on the Tactical Barbell(TB) routines. Originally designed for military operatives and combat athletes,
             | TB is a series of strength and conditioning routines designed to work alongside any other physically demanding 
             | activity you may be doing. It has since expanded to include routines which prioritize muscle gain, which are the focus of this app. 
             br
