--- a/views/login.pug
+++ b/views/login.pug
@@ -14,3 +14,5 @@ block content
             label(for='password') Password
             input#password.form-control(type='password', name='password')
         button.btn.btn-primary(type='submit') Submit
+    br
+    a(href='/getPassword' class="btn btn-secondary") Forgot Password?
