--- a/views/profile.pug
+++ b/views/profile.pug
@@ -18,12 +18,15 @@ block content
             if(workout)
                 h4 Today is Workout Day
                 br
-                | Go to <a href='/currentWorkout'>Workout</a>
+                a(href='/currentWorkout' class="btn btn-light") Go To Workout
             else if workout === undefined
                 | You've completed the workout for today!
             else
                 h4 No workout is scheduled for today. 
                 | To do a conditioning or aerobic exercise, click here.
-        a(href="/auth/logout" class="btn btn-danger") Logout
+        a(href="/exerciseHistory" class="btn btn-light") Exercise History
+        br
+        br
+        a(href="/auth/logout" class="btn btn-dark") Logout
         
                 
