--- a/views/routineSelector.pug
+++ b/views/routineSelector.pug
@@ -2,17 +2,17 @@ extends layout
 block content
     body
         h1 Select a Routine
-        p   
+        p.text-center   
             | Tactical Barbell uses 3 week routines of a prescribed number of sets and repetitions based around percentages of your one rep max for each exercise.
             br
             | These percentages will be calculated automatically based on the information you provide on test day. First select a routine that fits your schedule.
 
-        p    
+        p.text-center  
             |The first routine is the standard Mass Routine. 
             br
             | This is a four day per week routine that involves four required lifts, three of your choosing(1 for chest, 1 for back, 1 for legs) with the last being the deadlift. 
             br
-            a(href="/MassRoutine") Choose Mass Routine
+            a(href="/MassRoutine" class="btn btn-primary") Choose Mass Routine
             br
             br
             a(href="/auth/profile" class="btn btn-secondary") Return to Profile
