added heroku url to getPassword mailer, fixed db name in utils, added user name checks in routes

--- a/views/getPassword.pug
+++ b/views/getPassword.pug
@@ -1,6 +1,7 @@
 extends layout
 block content
     body
+        h3=error
         h1 Reset Password
         form(action="/getPassword" method='post')
             .form-group
@@ -9,3 +10,5 @@ block content
             input#email.form-control(type='email' name='email')
             br
             input(type="submit" value="Submit") 
+        br
+        a(href="/auth/profile" class="btn btn-secondary") Return to Profile
