added favicon and related express function

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -2,6 +2,7 @@ extends layout
 block content
     body
         h1 Welcome #{username}
+        h3=sucessRoutine
         h3=successSched 
         h3=successInc
         h3=errorMessage
