--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,7 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
         block css
+            link(rel="stylesheet" href ="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css", integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO", crossorigin="anonymous")
             link(rel="apple-touch-icon", sizes="180x180", href="/apple-touch-icon.png")
             link(rel="icon", type="image/png", sizes="32x32", href="/favicon-32x32.png")
             link(rel="icon", type="image/png", sizes="16x16", href="/favicon-16x16.png")
@@ -13,7 +14,7 @@ html(lang="en")
             link(rel="mask-icon", href="/safari-pinned-tab.svg", color="#5bbad5")
             meta(name="msapplication-TileColor", content="#da532c")
             meta(name="theme-color", content="#ffffff")
-   
+    
     body(style = "margin:15px; width:300px")
      
         script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
