replaced public folder

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,7 +1,7 @@
 extends layout
 block content
     body
-        h1 Welcome to Tactical Fit 
+        h1.text-center Welcome to Tactical Fit 
         p.text-center
             | This app is based on the Tactical Barbell(TB) routines. Originally designed for military operatives and combat athletes,
             | TB is a series of strength and conditioning routines designed to work alongside any other physically demanding 
