formatted and cleaned up code a little

--- a/views/mass.pug
+++ b/views/mass.pug
@@ -21,13 +21,7 @@ html(lang="en")
             br
             |If you're working with exercises you've entered in before, and you wish to use previous rep maxes, simply select the names and a start date
         p
-            | The exercises below are organized into "push", "pull", and "legs". 
-            br
-            | For this routine, it is recommended you choose the standard bench press, weighted pull-up*, and the barbell squat,  
-            br
-            | but variations of them can be chosen, if you have special reason to do so. 
-            br
-            | *must be able to perform 12 bodyweight pull-ups, otherwise choose a barbell row exercise. 
+            | The exercises below are organized into "push", "pull", "legs", and "deadlift". It is recommended you choose one of each.
             br
             | To determine your one rep max, warm up and add weight to the bar until you reach a weight you can only do 3-10 reps of with proper form. 
             br
