fixed router for current workout to acount for empty inputs

--- a/views/workout.pug
+++ b/views/workout.pug
@@ -41,6 +41,7 @@ block content
                         | Amount to increase rep max for subsequent workouts? 
                         br
                         select(id="add" name="increment")
+                            option(value=null) Select One
                             option(value=10) Weights felt light add 10lbs
                             option(value=5) Tough but doable - add 5 lbs
                             option(value=0) Very difficult keep weight the same 
